# todo-fastapi-react

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: crud.py  ping.py  todo_api.py
backend/app/models/: pydantic.py  tortoise.py
backend/db/: Dockerfile  create.sql
backend/migrations/models/: 2_20260225105014_None.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  testTodoService.js
frontend/src/components/: CreateTodo.jsx  Header.jsx  TodoItem.jsx  Todos.jsx
frontend/src/context/: TodoProvider.jsx
frontend/src/hooks/: useTodo.js
frontend/src/service/: todo.js
